--- a/user_profile/templates/user_profile/user_profile.html
+++ b/user_profile/templates/user_profile/user_profile.html
@@ -1,10 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block extra_css %}
-    <link rel="stylesheet" href="{% static 'user_profile/css/user_profile.css' %}">
-{% endblock %}
-
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -26,7 +22,7 @@
         <div class="row">
             <div class="col-12 col-lg-6">
                 <p class="form-title">Your delivery information</p>
-                <form class="mt-3" action="{% url 'user_profile' %" method="POST" id="profile-update-form">
+                <form class="mt-3" action="{% url 'user_profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
                     <button class=" btn-btn-black-rounded-0 update-profile float-right">Update</button>
