--- a/static/css/base.css
+++ b/static/css/base.css
@@ -450,6 +450,12 @@ hr.product.page-breaker {
 
 /* Toast messages */
 
+.toast.show {
+    display: block;
+    opacity: 1;
+    margin-right: 5px;
+}
+
 .site-message-container {
     position: fixed;
     top: 13px;
@@ -1248,7 +1254,6 @@ and (max-width: 480px) {
     span.product-detail.text-uppercase.mt-5,
     input.btn.btn-black.text-uppercase {
         font-size: 14px;
-        margin-bottom: 10px;
     }
 
     /* Allauth */
@@ -1325,7 +1330,6 @@ and (-webkit-min-device-pixel-ratio: 2) {
     span.product-detail.text-uppercase.mt-5,
     input.btn.btn-black.text-uppercase {
         font-size: 14px;
-        margin-bottom: 10px;
     }
 }
 
@@ -1380,7 +1384,6 @@ and (-webkit-min-device-pixel-ratio: 3) {
     span.product-detail.text-uppercase.mt-5,
     input.btn.btn-black.text-uppercase {
         font-size: 14px;
-        margin-bottom: 10px;
     }
 }
 
@@ -1463,7 +1466,6 @@ and (orientation:portrait) {
     span.product-detail.text-uppercase.mt-5,
     input.btn.btn-black.text-uppercase {
         font-size: 14px;
-        margin-bottom: 10px;
     }
 }
 
