--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -48,7 +48,7 @@
         <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'bag' %}">
             <div class="text-center text-white">
                 <div><i class="fas fa-cart-arrow-down"></i></div>
-                <p class="my-0">
+                <p class="my-0 bag-total-icon">
                     {% if grand_total %}
                         £{{ grand_total|floatformat:2 }}
                     {% else %}
